2014-10-10  Francois Felix Ingrand  <felix@ingrand.net>

	* lang.h ("C"): Disabling iso-char for now on the Mac, until I find a good fix for this.

	* oprs-parser.y.part (command): file_name does not seem to be usefull at all. read_file_name is probably better.

2014-10-10  Felix Ingrand  <felix@precise>

	* lex-exp.l.part (T): use .symbol, instead of .string

2014-10-09  Felix Ingrand  <felix@precise>

	* oprs-type.c (init_id_hash): output temporal operator in english
	if the -p or -peo (for X programs) are passed as arguments.

2014-10-09  Francois Felix Ingrand  <felix@ingrand.net>

	* lex-exp.l.part (T): reinstall the code to parse temporal operator long form.

2014-10-08  Francois Felix Ingrand  <felix@ingrand.net>

	* soak.c (clock_gettime): add a clock_gettime version grabbed from pocolib h2timeLib (thanks to Matthieu Herrb).

2014-01-21  Felix Ingrand  <felix@bobc1>

	* action.c (action_print_term): Strings where printed with
	backslash in message. Cause issues with FAPE.

2013-04-18  Felix Ingrand  <felix@precise>

	* xtop-lev-loop.c (xoprs_top_level_loop): Change the way we
	deregister ourself when halted to avoid hogging the CPU.

2013-04-17  Felix Ingrand  <felix@precise>

	* goprs-main.c (register_other_inputs): Change the gdk code to
	make it work like th Xt code.

2013-04-16  Felix Ingrand  <felix@precise>

	* xoprs-main.c (XtInputId_ready): rewrote completely the code
	which wake and register the xoprs_top_level_loop as a
	WorkProc. Now we instruct Xt to check socket for us (ours and
	external ones), and we register an AppTimeOut of
	main_loop_pool_usec.

2013-04-12  Felix Ingrand  <felix@precise>

	* top-lev.c (remove_external_readfds): Properly reset the
	max_external_readfds.

	* top-lev_f-pub.h: add this file for the "external readfds".

2013-02-26  Felix Ingrand  <felix@precise>

	* oprs-type.c (compare_term): reverse some symbol comparison which
	were intended to be string comparison...